transaction swagger and controller fixes
